@@ -22,8 +22,8 @@ export(list_dimsmets)
 export(list_experiments)
 export(list_filters)
 export(list_goals)
-export(list_metadata)
 export(list_profiles)
 export(list_segments)
 export(list_unsampled_reports)
 export(list_webproperties)
+export(shiny_dimsmets)
