@@ -1,0 +1,7 @@
+Title: Google Analytics APi dimensions and metrics
+Description: Lists all the dimensions and metrics for Core Reporting API
+Author: Artem Klevtsov
+DisplayMode: normal
+License: GPL-2
+Type: Shiny
+Tags: ga
