@@ -1,0 +1,7 @@
+ga <- try(RGA::list_dimsmets("ga"), silent = TRUE)
+if (inherits(ga, "try-error")) {
+    ga <- RGA::ga
+}
+
+cn <- colnames(ga)
+selected <- c("id", "ui.name", "type", "description")
